[package]
name = "kvs"
version = "0.1.0"
authors = ["Observer42 <yishengxu47@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.3"
kvs = { path = "./" }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
